...
          modifier = Modifier.fillMaxWidth().padding(16.dp),
          horizontalAlignment = Alignment.CenterHorizontally) {
            Text(context.getString(R.string.confirmSignout))
            PrimaryButton(
                text = context.getString(R.string.signout),
                onClick = signOut,
                modifier = Modifier.testTag("SignoutButton"))
            PrimaryButton(
                text = context.getString(R.string.denyRequest),
                color = PrimaryPink,
                onClick = closeDialog,
                modifier = Modifier.testTag("DenyButton"))
          }
    }
  }
}

